--- a/public/index.html
+++ b/public/index.html
@@ -218,6 +218,31 @@
                       <option value="ray 2" selected>Ray 2</option>
                       <option value="ray 2 flash">Ray 2 Flash</option>
                       <option value="ray 1.6">Ray 1.6</option>
+                      <option value="pixverse">pixverse v4 | effects</option>
+                    </select>
+                    <select id="stepPixTemplateSelect" class="border rounded px-2 py-2 hidden">
+                      <option value="">Select PixVerse style (required)</option>
+                      <option value="tpl_ghibli_live">Ghibli Live!</option>
+                      <option value="tpl_ghibli_magic">Ghibli Magic</option>
+                      <option value="tpl_vogue_walk">Vogue Walk</option>
+                      <option value="tpl_batman">Batman</option>
+                      <option value="tpl_iron_man">Iron Man</option>
+                      <option value="tpl_black_myth">Black Myth-Wukong</option>
+                      <option value="tpl_long_hair">Long Hair Magic</option>
+                      <option value="tpl_leggy_run">Leggy Run</option>
+                      <option value="tpl_wicked_shots">Wicked Shots</option>
+                      <option value="tpl_wonder_woman">Wonder Woman</option>
+                      <option value="tpl_alive_art">Alive Art</option>
+                      <option value="tpl_kiss_me_ai">Kiss Me, AI!</option>
+                      <option value="tpl_we_are_venom">We Are Venom!</option>
+                      <option value="tpl_hulk">Hulk</option>
+                      <option value="tpl_holy_wings">Holy Wings</option>
+                      <option value="tpl_hug_love">Hug Your Love</option>
+                      <option value="tpl_tiger_touch">The Tiger's Touch</option>
+                      <option value="tpl_anything_robot">Anything, Robot</option>
+                      <option value="tpl_warmth_jesus">Warmth of Jesus</option>
+                      <option value="tpl_muscle_surge">Muscle Surge</option>
+                      <option value="tpl_kiss_kiss">Kiss Kiss</option>
                     </select>
                     <button
                       id="stepGenerateVideoBtn"
@@ -633,6 +658,31 @@
                   <option value="ray 2" selected>Ray 2</option>
                   <option value="ray 2 flash">Ray 2 Flash</option>
                   <option value="ray 1.6">Ray 1.6</option>
+                  <option value="pixverse">pixverse v4 | effects</option>
+                </select>
+                <select id="featurePixTemplateSelect" class="border rounded px-2 py-2 hidden">
+                  <option value="">Select PixVerse style (required)</option>
+                  <option value="tpl_ghibli_live">Ghibli Live!</option>
+                  <option value="tpl_ghibli_magic">Ghibli Magic</option>
+                  <option value="tpl_vogue_walk">Vogue Walk</option>
+                  <option value="tpl_batman">Batman</option>
+                  <option value="tpl_iron_man">Iron Man</option>
+                  <option value="tpl_black_myth">Black Myth-Wukong</option>
+                  <option value="tpl_long_hair">Long Hair Magic</option>
+                  <option value="tpl_leggy_run">Leggy Run</option>
+                  <option value="tpl_wicked_shots">Wicked Shots</option>
+                  <option value="tpl_wonder_woman">Wonder Woman</option>
+                  <option value="tpl_alive_art">Alive Art</option>
+                  <option value="tpl_kiss_me_ai">Kiss Me, AI!</option>
+                  <option value="tpl_we_are_venom">We Are Venom!</option>
+                  <option value="tpl_hulk">Hulk</option>
+                  <option value="tpl_holy_wings">Holy Wings</option>
+                  <option value="tpl_hug_love">Hug Your Love</option>
+                  <option value="tpl_tiger_touch">The Tiger's Touch</option>
+                  <option value="tpl_anything_robot">Anything, Robot</option>
+                  <option value="tpl_warmth_jesus">Warmth of Jesus</option>
+                  <option value="tpl_muscle_surge">Muscle Surge</option>
+                  <option value="tpl_kiss_kiss">Kiss Kiss</option>
                 </select>
                 <button
                   id="featureGenerateVideoBtn"
