add minimax models

--- a/public/index.html
+++ b/public/index.html
@@ -218,6 +218,10 @@
                       <option value="ray 2" selected>Ray 2</option>
                       <option value="ray 2 flash">Ray 2 Flash</option>
                       <option value="ray 1.6">Ray 1.6</option>
+                      <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
+                      <option value="I2V-01-Director">I2V-01-Director</option>
+                      <option value="I2V-01-live">I2V-01-live</option>
+                      <option value="I2V-01">I2V-01</option>
                     </select>
                     <button
                       id="stepGenerateVideoBtn"
@@ -633,6 +637,10 @@
                   <option value="ray 2" selected>Ray 2</option>
                   <option value="ray 2 flash">Ray 2 Flash</option>
                   <option value="ray 1.6">Ray 1.6</option>
+                  <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
+                  <option value="I2V-01-Director">I2V-01-Director</option>
+                  <option value="I2V-01-live">I2V-01-live</option>
+                  <option value="I2V-01">I2V-01</option>
                 </select>
                 <button
                   id="featureGenerateVideoBtn"
