--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
           id="stepDetailPage"
           class="hidden w-full h-full px-10 py-8 bg-gray-50 overflow-auto"
         >
-          <div class="max-w-3xl mx-auto bg-white rounded-xl shadow p-8">
+          <div class=" mx-auto bg-white rounded-xl shadow p-8">
             <div class="flex items-center justify-between mb-8">
               <h2 class="text-2xl font-bold text-gray-800">Step Details</h2>
               <button
@@ -256,6 +256,10 @@
                     class="mt-4"
                     style="display: none"
                   ></div>
+                  <div class="mt-4">
+                    <div class="text-sm font-semibold text-gray-700 mb-1">Existing Videos</div>
+                    <div id="stepGeneratedList" class="text-sm text-gray-500"></div>
+                  </div>
                 </div>
               </div>
             </div>
