--- a/public/index.html
+++ b/public/index.html
@@ -618,6 +618,7 @@
                   <option value="ray 2 flash">Ray 2 Flash</option>
                   <option value="ray 1.6">Ray 1.6</option>
                   <option value="vidu-q1-reference-to-video">Vidu Q1 Reference2Video</option>
+                  <option value="vidu-2-reference-to-video">Vidu 2.0 Reference2Video</option>
                   <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
                   <option value="MiniMax I2V-01-Director">I2V-01-Director</option>
                   <option value="MiniMax I2V-01-live">I2V-01-live</option>
