add google models and UI fixes

--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,10 @@
                       <option value="ray-1.6">Ray 1.6</option>
                       <option value="vidu-q1-reference-to-video">Vidu Q1 Reference2Video</option>
                       <option value="vidu-1.5-image-to-video">Vidu 1.5 Image2Video</option>
+                      <option value="vidu-2.0-image-to-video">Vidu 2.0 Image2Video</option>
                       <option value="vidu-q1-image-to-video">Vidu Q1 Image2Video</option>
+                      <option value="veo-2-image-to-video">Veo 2 Image2Video</option>
+                      <option value="veo-3-image-to-video">Veo 3 Image2Video</option>
                       <option value="pixverse-v4-image-to-video">Pixverse V4 (I2V)</option>
                       <option value="pixverse-v4-transition">Pixverse V4 Transition</option>
                       <option value="pixverse-v4.5-image-to-video">Pixverse V4.5 (I2V)</option>
@@ -579,7 +582,6 @@
                 <textarea
                   id="templateDescription"
                   class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
-                  required
                 ></textarea>
               </div>
               <div>
@@ -768,7 +770,10 @@
                   <option value="ray 1.6">Ray 1.6</option>
                     <option value="vidu-q1-reference-to-video">Vidu Q1 Reference2Video</option>
                     <option value="vidu-1.5-image-to-video">Vidu 1.5 Image2Video</option>
+                    <option value="vidu-2.0-image-to-video">Vidu 2.0 Image2Video</option>
                     <option value="vidu-q1-image-to-video">Vidu Q1 Image2Video</option>
+                    <option value="veo-2-image-to-video">Google Veo 2 Image2Video</option>
+                    <option value="veo-3-image-to-video">Google Veo 3 Image2Video</option>
                     <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
                   <option value="MiniMax I2V-01-Director">I2V-01-Director</option>
                   <option value="MiniMax I2V-01-live">I2V-01-live</option>
