add google veo 3 fast from runware

--- a/public/index.html
+++ b/public/index.html
@@ -738,6 +738,7 @@
                     <option value="vidu-q1-image-to-video">Vidu Q1 Image2Video</option>
                     <option value="veo-2-image-to-video">Google Veo 2 Image2Video</option>
                     <option value="veo-3-image-to-video">Google Veo 3 Image2Video</option>
+                  <option value="veo3@fast">Google Veo 3 Fast</option>
                     <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
                   <option value="MiniMax I2V-01-Director">I2V-01-Director</option>
                   <option value="MiniMax I2V-01-live">I2V-01-live</option>
