--- a/public/index.html
+++ b/public/index.html
@@ -739,6 +739,13 @@
                     <option value="veo-2-image-to-video">Google Veo 2 Image2Video</option>
                     <option value="veo-3-image-to-video">Google Veo 3 Image2Video</option>
                   <option value="veo3@fast">Google Veo 3 Fast</option>
+                  <option value="google:3@2">Google Veo 3.1</option>
+                  <option value="google:3@3">Google Veo 3.1 Fast</option>
+                  <option value="lightricks:2@0">LTX 2 pro (runware)</option>
+                  <option value="lightricks:2@1">LTX 2 fast (runware)</option>
+                  <option value="vidu:3@2">vidu q2 turbo (runware)</option>
+                  <option value="vidu:3@1">vidu q2 pro (runware)</option>
+                  <option value="seedance-pro-fast">Seedance 1.0 Pro Fast (Runware)</option>
                     <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
                   <option value="MiniMax I2V-01-Director">I2V-01-Director</option>
                   <option value="MiniMax I2V-01-live">I2V-01-live</option>
@@ -748,7 +755,7 @@
                   <option value="pixverse-v4-transition">Pixverse V4 Transition</option>
                   <option value="pixverse-v4-image-to-video">Pixverse V4 Image2Video</option>
                      <option value="pixverse-v4.5-image-to-video">Pixverse V4.5 Image2Video</option>
-                    <option value="pixverse-v5-image-to-video">Pixverse V5 Image2Video</option>
+                    <option value="pixverse-v5-image-to-video">Pixverse V5</option>
                   <option value="kling-v1-standard-image-to-video">Kling v1 Standard Image2Video</option>
                     <option value="kling-v1-pro-image-to-video">Kling v1 Pro Image2Video</option>
                   <option value="kling-1.5-pro-image-to-video">Kling 1.5 Pro Image2Video</option>
