--- a/public/index.html
+++ b/public/index.html
@@ -741,11 +741,11 @@
                   <option value="veo3@fast">Google Veo 3 Fast</option>
                   <option value="google:3@2">Google Veo 3.1</option>
                   <option value="google:3@3">Google Veo 3.1 Fast</option>
-                  <option value="lightricks:2@0">LTX 2 pro (runware)</option>
-                  <option value="lightricks:2@1">LTX 2 fast (runware)</option>
-                  <option value="vidu:3@2">vidu q2 turbo (runware)</option>
-                  <option value="vidu:3@1">vidu q2 pro (runware)</option>
-                  <option value="seedance-pro-fast">Seedance 1.0 Pro Fast (Runware)</option>
+                  <option value="lightricks:2@0">LTX 2 pro </option>
+                  <option value="lightricks:2@1">LTX 2 fast </option>
+                  <option value="vidu:3@2">vidu q2 turbo </option>
+                  <option value="vidu:3@1">vidu q2 pro </option>
+                  <option value="seedance-pro-fast">Seedance 1.0 Pro Fast </option>
                     <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
                   <option value="MiniMax I2V-01-Director">I2V-01-Director</option>
                   <option value="MiniMax I2V-01-live">I2V-01-live</option>
