--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,12 @@
             </li>
             <li>
               <button
+                onclick="switchTab('photo-filters')"
+                class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100 w-full text-left"
+              ><i class="fa fa-image mr-3"></i>Photo Filters</button>
+            </li>
+            <li>
+              <button
                 onclick="switchTab('templates')"
                 class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100 w-full text-left"
                 ><i class="fa fa-layer-group mr-3"></i>Templates</button
@@ -338,7 +344,7 @@
             </ul>
           </div>
         </div>
-        <div id="tab-filters" class="tab-content w-full px-10 py-6 hidden">
+  <div id="tab-filters" class="tab-content w-full px-10 py-6 hidden">
           <div class="flex items-center justify-between mb-4">
             <h2 class="text-2xl font-bold text-gray-800">Features</h2>
             <div class="flex gap-2">
@@ -418,6 +424,29 @@
               </form>
             </div>
           </div>
+        </div>
+        <div id="tab-photo-filters" class="tab-content w-full px-10 py-6 hidden">
+          <div class="flex items-center justify-between mb-4">
+            <h2 class="text-2xl font-bold text-gray-800">Photo Filters</h2>
+            <div class="flex gap-2">
+              <input
+                id="photoFeatureSearch"
+                type="text"
+                placeholder="Search photo filters..."
+                class="border border-gray-300 rounded-lg px-3 py-2 w-64 focus:outline-none focus:ring-2 focus:ring-blue-400"
+              />
+              <button
+                id="addPhotoFeatureBtn"
+                class="ml-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center"
+              >
+                <i class="fa fa-plus mr-2"></i>Add Photo Filter
+              </button>
+            </div>
+          </div>
+          <div
+            id="photoFeaturesGrid"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
+          ></div>
         </div>
         <div id="tab-templates" class="tab-content w-full px-10 py-6 hidden">
           <div class="flex items-center justify-between mb-4">
