--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,13 @@
                 ><i class="fa fa-layer-group mr-3"></i>Templates</button
               >
             </li>
+            <li>
+              <button
+                onclick="switchTab('apps')"
+                class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100 w-full text-left"
+                ><i class="fa fa-plug mr-3"></i>Apps</button
+              >
+            </li>
           </ul>
         </nav>
         <div class="mt-auto flex items-center justify-between pt-8">
@@ -470,6 +477,22 @@
             id="templatesGrid"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
           ></div>
+        </div>
+        <div id="tab-apps" class="tab-content w-full px-10 py-6 hidden">
+          <div class="flex items-center justify-between mb-4">
+            <h2 class="text-2xl font-bold text-gray-800">Apps</h2>
+          </div>
+          <div class="bg-white rounded-xl shadow p-6 mb-6">
+            <form id="createAppForm" class="flex gap-2 items-end">
+              <div class="flex-1">
+                <label class="block text-gray-700 font-semibold mb-1">App Name</label>
+                <input id="newAppName" type="text" class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="My App" required />
+              </div>
+              <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Create + Generate Key</button>
+            </form>
+            <div id="createAppStatus" class="text-sm mt-2"></div>
+          </div>
+          <div id="appsList" class="grid grid-cols-1 gap-4"></div>
         </div>
         <div id="tab-profile" class="tab-content w-full px-10 py-6 hidden">
           <!-- Profile tab is empty for now -->
