fix minor issues and add riverflow 1.1

--- a/public/index.html
+++ b/public/index.html
@@ -718,6 +718,11 @@
               style="width: 100%; max-height: 300px"
               class="mb-2 rounded"
             ></video>
+            <img
+              id="featureDetailPhoto"
+              style="display:none; width:100%; max-height:300px"
+              class="mb-2 rounded"
+            />
             <!-- Feature video generation section -->
             <div id="featureVideoGenSection" class="mb-6">
               <div class="bg-gradient-to-br from-blue-50 to-indigo-50 rounded-2xl p-6 border border-blue-100 shadow-sm">
