add new vid models

--- a/public/index.html
+++ b/public/index.html
@@ -802,6 +802,11 @@
                   <option value="lightricks:2@1">LTX 2 fast </option>
                   <option value="vidu:3@2">vidu q2 turbo </option>
                   <option value="vidu:3@1">vidu q2 pro </option>
+                  <option value="runway:1@1">Runway Gen-4 Turbo</option>
+                  <option value="openai:3@1">OpenAI Sora 2</option>
+                  <option value="openai:3@2">OpenAI Sora 2 Pro</option>
+                  <option value="minimax:4@1">MiniMax Hailuo 2.3 (Runware)</option>
+                  <option value="minimax:4@2">MiniMax Hailuo 2.3 Fast (Runware)</option>
                   <option value="seedance-pro-fast">Seedance 1.0 Pro Fast </option>
                     <option value="MiniMax-Hailuo-02">MiniMax-Hailuo-02</option>
                   <option value="MiniMax I2V-01-Director">I2V-01-Director</option>
